<resources>
    <string name="app_name">Sumo App</string>
    <string name="search">Search</string>
    <string name="basho">Basho</string>
    <string name="settings">Settings</string>
    <string name="banzuke">Banzuke</string>
    <string name="favourites">Favourites</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_a_basho">Basho Winner</string>
    <string name="select_month">Month</string>
    <string name="select_year">Year</string>
    <string name="select_division">Division</string>
    <string name="number_content_description">Number %1$d</string>
    <string name="arrow_left"><![CDATA[<]]></string>
    <string name="arrow_right"><![CDATA[>]]></string>
    <string name="winners">Winners</string>
    <string name="special_prizes">Special Prizes (Sanshō)</string>
    <string name="loading">Loading...</string>
    <string name="search_rikishi">Search for a rikishi</string>
    <string name="yusho_titles">Yusho (Titles)</string>
    <string name="division">Division</string>
    <string name="career">Career</string>
    <string name="makuuchi">Makuuchi</string>
    <string name="juryo">Juryo</string>
    <string name="makushita">Makushita</string>
    <string name="sandanme">Sandanme</string>
    <string name="jonidan">Jonidan</string>
    <string name="jonokuchi">Jonokuchi</string>
    <string name="division_statistics">Division Statistics</string>
    <string name="losses">Losses</string>
    <string name="wins">Wins</string>
    <string name="yusho">Yusho</string>
    <string name="total">Total</string>
    <string name="rikishi">Rikishi</string>
    <string name="torikumi">Torikumi</string>
    <string name="kimarite">Kimarite</string>
    <string name="east">East</string>
    <string name="west">West</string>
    <string name="versus">Versus</string>
    <string name="rikishi_meaning">Sumo wrestler</string>
    <string name="kimarite_meaning">Winning technique</string>
    <string name="rikishi_image">Rikishi Image</string>

    <string name="account_button_text">Account</string>
    <string name="login_icon_desc">Login Icon</string>
    <string name="hello_again">Hello Again!</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="no_account_prompt">Don\'t have an account?</string>
    <string name="create_account_button_text">Create Account</string>
    <string name="signup_icon_desc">Signup Icon</string>
    <string name="hello_user">Hello!</string>
    <string name="lets_get_started">Let\'s Get Started</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="already_have_account_prompt">Already have an account?</string>
    <string name="register_button_text">Register</string>

    <string name="account_icon_desc">Account Icon</string>
    <string name="account_title">Account Details</string>
    <string name="change_password_button_text">Change Password</string>
    <string name="logout_button_text">Logout</string>

    <string name="old_password_hint">Old Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="confirm_new_password_hint">Confirm New Password</string>
    <string name="confirm_changes_button_text">Confirm Changes</string>

    <string name="login_required_toast">To use this feature, you must first log into your account.</string>

    <string name="themes_premium_title">Premium Feature</string>
    <string name="themes_premium_message">Custom themes are a premium feature. Unlock all themes forever for a one-time payment.</string>
    <string name="themes_price">Price: 1€</string>
    <string name="pay_button_text">Pay</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="payment_successful_toast">Payment successful! Themes unlocked.</string>
</resources>